write a comment done

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1666,6 +1666,10 @@ select {
     padding: 6rem;
   }
 
+  .md\:p-12 {
+    padding: 3rem;
+  }
+
   .md\:px-0 {
     padding-left: 0px;
     padding-right: 0px;
